// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offline warning can render 1`] = `
"[33m[39m
[33m ┌───────────────────────────┐[39m
 [33m│[39m [33m(⌒_⌒;) This is awkward...[39m [33m│[39m
[33m └───────────────────────────┘[39m
    ↳ ...you appear to be [31m[1moffline[22m[39m
    ↳ Please connect to the internet and [36m[1mtry again[22m[39m

      [2mNo dependencies will be installed[22m
"
`;

exports[`Offline warning does not render when offline and skipInstall === true 1`] = `
"[36m[39m
[36m ╭───────────╮[39m
 [36m│[39m add babel [36m│[39m
[36m ╰───────────╯[39m
    [2m↳ [22m[2mFinished [22m[37m[1m1[22m[39m[2m[1m of [22m[2m[22m[37m[1m2[22m[39m[2m tasks[22m[2m ([22m[1m1[22m[2m completed, [22m[1m5[22m[2m skipped[22m)

   [32m[1m✔ [22m[39m[2mCreate Babel config file[22m
   [2m[1m✔ [22m[2m[22m[2mAdd Babel build task to package.json[22m
   [2m[1m✔ [22m[2m[22m[2mInstall Babel core, CLI, presets, and plugins[22m

"
`;

exports[`Offline warning renders when offline and skipInstall === false 1`] = `
"[33m[39m
[33m ┌───────────────────────────┐[39m
 [33m│[39m [33m(⌒_⌒;) This is awkward...[39m [33m│[39m
[33m └───────────────────────────┘[39m
    ↳ ...you appear to be [31m[1moffline[22m[39m
    ↳ Please connect to the internet and [36m[1mtry again[22m[39m

      [2mNo dependencies will be installed[22m

[36m[39m
[36m ╭───────────╮[39m
 [36m│[39m add babel [36m│[39m
[36m ╰───────────╯[39m
    [2m↳ [22m[2mFinished [22m[37m[1m1[22m[39m[2m[1m of [22m[2m[22m[37m[1m2[22m[39m[2m tasks[22m[2m ([22m[1m1[22m[2m completed, [22m[1m5[22m[2m skipped[22m)

   [32m[1m✔ [22m[39m[2mCreate Babel config file[22m
   [2m[1m✔ [22m[2m[22m[2mAdd Babel build task to package.json[22m
   [2m[1m✔ [22m[2m[22m[2mInstall Babel core, CLI, presets, and plugins[22m

"
`;
